<package>
  <name>trajectoryplanner</name>
  <version>1.0.0</version>
  <description>This package contains the components of the trajectoryplanner package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <run_depend>rtt</run_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <export>

  </export>
</package>
